feat(playlists): support manual local mapping
